--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-cors": "^0.11.3",
-        "doctrine/dbal": "^2.9", "fideloper/proxy": "^4.0",
+        "doctrine/dbal": "^2.9",
+        "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
+        "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
