--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.2",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "twbs/bootstrap": "4.0.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
